--- a/cheese-mvc/src/main/resources/templates/cheese/remove.html
+++ b/cheese-mvc/src/main/resources/templates/cheese/remove.html
@@ -16,7 +16,7 @@
         <br />
     </div>
 
-    <input type="submit" value="Remove some Cheese" />
+    <input type="submit" value="Remove Cheese" />
 </form>
 
 </body>
