--- a/cheese-mvc/src/main/resources/templates/cheese/remove.html
+++ b/cheese-mvc/src/main/resources/templates/cheese/remove.html
@@ -11,7 +11,7 @@
 <form method="post">
 
     <div th:each="cheese : ${cheeses}" class="checkbox">
-        <input type="checkbox" name="cheeseIds" th:value="${cheese.cheeseId}" th:id="${cheese.cheeseId}"/>
+        <input type="checkbox" name="cheeseIds" th:value="${cheese.id}" th:id="${cheese.cheeseId}"/>
         <label th:for="${cheese.cheeseId}" th:text="${cheese.name}"></label>
         <br />
     </div>
