--- a/cheese-mvc/src/main/resources/templates/cheese/add.html
+++ b/cheese-mvc/src/main/resources/templates/cheese/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class="container body-content">
+<body class="container">
 <h1 th:text="${title}">Default Title</h1>
 
 <nav th:replace="fragments :: navigation"></nav>
@@ -9,7 +9,7 @@
 <form method="post" style="max-width:600px;" th:object="${cheese}">
     <div class="form-group">
         <label th:for="name">Name</label>
-        <input class="form-control" th:field="*{name}"/>
+        <input class="form-control" th:field="*{name}" />
         <span th:errors="*{name}" class="error"></span>
     </div>
     <div class="form-group">
@@ -26,6 +26,7 @@
                     th:value="${cheeseType}"></option>
         </select>
     </div>
+
     <input type="submit" value="Add Cheese" />
 </form>
 
