--- a/cheese-mvc/src/main/resources/templates/cheese/remove.html
+++ b/cheese-mvc/src/main/resources/templates/cheese/remove.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body class="container body-content">
+<body class="container">
 
 <h1 th:text="${title}">Default Title</h1>
 
@@ -11,8 +10,8 @@
 <form method="post">
 
     <div th:each="cheese : ${cheeses}" class="checkbox">
-        <input type="checkbox" name="cheeseIds" th:value="${cheese.id}" th:id="${cheese.cheeseId}"/>
-        <label th:for="${cheese.cheeseId}" th:text="${cheese.name}"></label>
+        <input type="checkbox" name="cheeseIds" th:value="${cheese.id}" th:id="${cheese.id}"/>
+        <label th:for="${cheese.id}" th:text="${cheese.name}"></label>
         <br />
     </div>
 
